--- a/index.html
+++ b/index.html
@@ -6,25 +6,16 @@
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="style.css">
-	 <title>Amazon</title>
+	 <title>test</title>
 	 <script src="https://kit.fontawesome.com/fca79017c5.js" crossorigin="anonymous"></script>
 	</head>
 	
 	<body>
-	 <div>
-	 <header class="container">
-	 </div>
-	 </header>
-	 <body class="grid-container">
-		<header class="header">
-		  <nav class="navbar">
-			<ul class="nav-list">
-			  <li class="id1"><i class="fa-brands fa-amazon"></i></li>
-			  <li class="id2"></li>
-			  <li>Contact</li>
-			</ul>
-		  </nav>
-	 
+		<div class="inner-one">
+			<div>
+				<div class="inner-div sidekick">sidekick</div>
+			</div>
+		
 	 <main>
 	 <div class="product1">
 	 
